RSOP/force-app/main/default/objects/Resource_Optimizer_Config__mdt/Resource_Optimizer_Config__mdt.object-meta.xml
<CustomObject>
    <label>Resource Optimizer Config</label>
    <pluralLabel>Resource Optimizer Config</pluralLabel>
</CustomObject>