RSOP/force-app/main/default/objects/Resource_Optimizer_Config__mdt/fields/Are_your_Users_are_Resources__c.field-meta.xml
<CustomField>
    <fullName>Are_your_Users_are_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are your Users are Resources?</label>
    <type>Checkbox</type>
</CustomField>