RSOP/force-app/main/default/objects/Resource_Optimizer_Config__mdt/fields/Do_you_allow_Overlay__c.field-meta.xml
<CustomField>
    <fullName>Do_you_allow_Overlay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you allow Overlay?</label>
    <type>Checkbox</type>
</CustomField>