RSOP/force-app/main/default/objects/Resource_Optimizer_Config__mdt/fields/Do_you_need_Resource_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_Resource_Grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you need Resource Grouping?</label>
    <type>Checkbox</type>
</CustomField>