RSOP/force-app/main/default/objects/Resource_Optimizer_Config__mdt/fields/Organisation_business_hours_end_time__c.field-meta.xml
<CustomField>
    <fullName>Organisation_business_hours_end_time__c</fullName>
    <label>Organisation business hours end time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>