RSOP/force-app/main/default/objects/Resource_Optimizer_Config__mdt/fields/Select_Profiles_to_create_Resources__c.field-meta.xml
<CustomField>
    <fullName>Select_Profiles_to_create_Resources__c</fullName>
    <label>Select Profiles to create Resources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>